# nfcauth

./: .gitignore  LICENSE  README.md  build.gradle  gradle.properties  justfile  nfc_reader.py  settings.gradle
.github/workflows/: android.yml  python.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/de/infornautik/nfcauth/: AuthDatabase.kt  BiometricAuthStateManager.kt  BiometricPromptActivity.kt  CardEmulationAuthService.kt  KeyManager.kt  MainActivity.kt  NotRegisteredDialog.kt  ReaderInfo.kt  ReadersAdapter.kt  RegistrationActivity.kt  RegistrationDataManager.kt  RegistrationDialog.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_foreground_bak.xml
app/src/main/res/layout/: activity_main.xml  activity_not_registered_dialog.xml  dialog_registration.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: aid_list.xml
python/: .gitignore  justfile  pyproject.toml
python/nfc_authenticator/: nfc_reader.py
